--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@testing-library/jest-dom": "5.11.4",
 		"@testing-library/react": "11.1.0",
 		"@testing-library/user-event": "12.1.10",
+		"ajv": "^8.17.1",
 		"apexcharts": "^3.30.0",
 		"chroma-js": "2.1.2",
 		"eslint": "^7.11.0",
